horizontal scroll fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,19 @@
+/* @media only screen and (max-width: 768px) {
+  html,body,#root {
+    overflow-x: scroll;
+  }
+
+} */
+
 html,body,#root {
   margin: 0;
   height: 100%;
   width: 100%;
   max-width: 100%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   background-color: #1a1a1d;
+
 }
+
+
 
